{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 631,
  "lineage": "9b7c0eed-bf0a-c16c-8bfe-a01e5a1970c0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:481665107235:vpc/vpc-003b912da94b9e72f",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a144e415cde9bc9b",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e947c4030c41c9bf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003b912da94b9e72f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05369487a5f9f0a42",
            "owner_id": "481665107235",
            "tags": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gcp_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.10.1.1",
            "id": "projects/peppy-arcadia-432311-g5/regions/asia-northeast3/subnetworks/private-subnet",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/networks/gcp-dr-vpc",
            "private_ip_google_access": true,
            "project": "peppy-arcadia-432311-g5",
            "region": "asia-northeast3",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/14",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/16",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/regions/asia-northeast3/subnetworks/private-subnet",
            "subnetwork_id": 5786870450463554398
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpn_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.200.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-054ccbc4b8a46bef4",
            "id": "r-rtb-0f880a45034d6a4ef4252409353",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f880a45034d6a4ef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpn_gateway.vpn_gw",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "aws_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "10.0.0.0/16",
            "id": "projects/peppy-arcadia-432311-g5/global/routes/gcp-to-aws-route",
            "name": "gcp-to-aws-route",
            "network": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/networks/gcp-dr-vpc",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/regions/asia-northeast3/vpnTunnels/aws-to-gcp-vpn-1",
            "priority": 1000,
            "project": "peppy-arcadia-432311-g5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/routes/gcp-to-aws-route",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_customer_gateway.gcp_ip",
            "aws_vpn_connection.aws_gcp_vpn",
            "aws_vpn_gateway.vpn_gw",
            "data.terraform_remote_state.gcp",
            "data.terraform_remote_state.network",
            "google_compute_external_vpn_gateway.aws_external_gw",
            "google_compute_ha_vpn_gateway.gcp_vpn_gw",
            "google_compute_router.gcp_router",
            "google_compute_vpn_tunnel.vpn_tunnel_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "aws_routes_backup",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "10.0.0.0/16",
            "id": "projects/peppy-arcadia-432311-g5/global/routes/gcp-to-aws-route-backup",
            "name": "gcp-to-aws-route-backup",
            "network": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/networks/gcp-dr-vpc",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/regions/asia-northeast3/vpnTunnels/aws-to-gcp-vpn-2",
            "priority": 2000,
            "project": "peppy-arcadia-432311-g5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/routes/gcp-to-aws-route-backup",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_customer_gateway.gcp_ip",
            "aws_vpn_connection.aws_gcp_vpn",
            "aws_vpn_gateway.vpn_gw",
            "data.terraform_remote_state.gcp",
            "data.terraform_remote_state.network",
            "google_compute_external_vpn_gateway.aws_external_gw",
            "google_compute_ha_vpn_gateway.gcp_vpn_gw",
            "google_compute_router.gcp_router",
            "google_compute_vpn_tunnel.vpn_tunnel_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "gcp_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65000,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2025-02-20T21:56:10.247-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/peppy-arcadia-432311-g5/regions/asia-northeast3/routers/gcp-router",
            "name": "gcp-router",
            "network": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/networks/gcp-dr-vpc",
            "project": "peppy-arcadia-432311-g5",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/regions/asia-northeast3/routers/gcp-router"
          },
          "dependencies": [
            "data.terraform_remote_state.gcp"
          ]
        }
      ]
    }
  ]
}